# backend/chat-microservice/src/app/handlers/chat-user-answered.handler.ts
@@ -2,7 +2,7 @@ import { ChatUserAnsweredEvent } from "@core/events";
 import { GenerateQuestionCommand } from "src/domain/commands/generate-question.command";
 import { GetOccasionQuery } from "src/domain/queries/get-occasion.query";
 
-import { Controller } from "@nestjs/common";
+import { Controller, Logger } from "@nestjs/common";
 import { CommandBus, QueryBus } from "@nestjs/cqrs";
 import { EventPattern } from "@nestjs/microservices";
 
@@ -13,6 +13,8 @@ export class ChatUserAnsweredHandler {
     private readonly queryBus: QueryBus,
   ) {}
 
+  private readonly logger = new Logger(ChatUserAnsweredHandler.name);
+
   @EventPattern(ChatUserAnsweredEvent.name)
   async handle(event: ChatUserAnsweredEvent): Promise<void> {
     const occasion = await this.queryBus.execute(
@@ -22,6 +24,9 @@ export class ChatUserAnsweredHandler {
     if (occasion == null) {
       throw new Error(`No occasion found for chat ${event.chatId}`);
     }
+    this.logger.log(
+      `Generating question for chat ${event.chatId} with occasion ${occasion}`,
+    );
 
     await this.commandBus.execute(
       new GenerateQuestionCommand(event.chatId, occasion, event.messages),
