# backend/restapi-macroservice/src/webapi/controllers/restapi.controller.ts
@@ -1,11 +1,12 @@
 import { SendUserMessageCommand } from "src/domain/commands/send-user-message.command";
 import { StartProcessingCommand } from "src/domain/commands/start-processing.command";
 import type { AuthenticatedRequest } from "src/domain/models/auth.types";
-import { SendMessageDto } from "src/domain/models/send-message.dto";
 import {
-  StalkingAnalyzeRequestDto,
-  StalkingAnalyzeRequestDto as StalkingAnalyzeRequestDtoDocument,
-} from "src/domain/models/stalking-analyze-request.dto";
+  PotencialAnswersFreeTextDto,
+  PotencialAnswersSelectDto,
+} from "src/domain/models/chat-message.dto";
+import { SendMessageDto } from "src/domain/models/send-message.dto";
+import { StalkingAnalyzeRequestDto } from "src/domain/models/stalking-analyze-request.dto";
 
 import { Body, Controller, Logger, Post, Req, UseGuards } from "@nestjs/common";
 import { CommandBus } from "@nestjs/cqrs";
@@ -19,7 +20,7 @@ import {
 import { JwtAuthGuard } from "../../app/guards/jwt-auth.guard";
 
 @ApiTags("restapi")
-@ApiExtraModels(StalkingAnalyzeRequestDtoDocument)
+@ApiExtraModels(PotencialAnswersSelectDto, PotencialAnswersFreeTextDto)
 @Controller("restapi")
 export class RestApiController {
   private readonly logger = new Logger(RestApiController.name);
@@ -46,6 +47,9 @@ export class RestApiController {
   @ApiOperation({ summary: "Send chat messages to the system" })
   @ApiOkResponse({ description: "Message accepted" })
   async sendMessage(@Body() sendMessageDto: SendMessageDto): Promise<void> {
+    this.logger.log(
+      `Sending message to the system: ${JSON.stringify(sendMessageDto)}`,
+    );
     await this.commandBus.execute(new SendUserMessageCommand(sendMessageDto)); // TODO(simon-the-shark): validate sendMessageDto
   }
 }
